k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-lightning-service
  labels:
    app: django-lightning
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-lightning
